--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Log in to edu sharing
         run: docker login ${{env.docker_repository}} -u ${{ secrets.DOCKER_EDU_HUB_REGISTRY_USERNAME }} -p ${{ secrets.DOCKER_EDU_HUB_REGISTRY_PASSWORD }}
       - name: Build
-        run: docker build -t ${{env.docker_repository}}${{env.path_prefix}}:${{env.image_tag}} .
+        run: docker build -t ${{env.docker_repository}}${{env.path_prefix}}:${{env.image_tag}} ./src
       - name: Push
         run: docker push ${{env.docker_repository}}${{env.path_prefix}}:${{env.image_tag}}
