--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ rdflib = "^6.1.1"
 nltk = "^3.7"
 treelib = "^1.6.1"
 uvicorn = "^0.17.6"
+pre-commit = "^2.19.0"
 
 [tool.poetry.dev-dependencies]
 
