--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ nltk = "^3.7"
 treelib = "^1.6.1"
 uvicorn = "^0.17.6"
 pre-commit = "^2.19.0"
+pytest = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 
