WIP: Fixing topic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,6 @@ services:
     image: docker.edu-sharing.com/projects/oeh-redaktion/edusharing-projects-oeh-redaktion-yovisto:dev
     <<: *restart-policy
     <<: *logging-config
-    ports:
-      - "8082:8082"
     environment:
       ROOT_PATH: ""
       API_VERSION: "${API_VERSION:-v1}"
@@ -33,6 +31,7 @@ services:
       LOG_LEVEL: "${LOG_LEVEL:-debug}"
       LOGGER: uvicorn
       WEB_CONCURRENCY: 1
+      WANT_RETRAINING: False
     command: bash -c "uvicorn --host 0.0.0.0 --port 8082 --reload main:app"
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8082/_ping" ]
