build:fix docker syntax error for docker compose version 2.18.1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,7 @@ services:
       context: .
       network: host
     image: docker.edu-sharing.com/projects/wlo/edu_sharing-projects-wlo-yovisto:dev
-    <<: *restart-policy
-    <<: *logging-config
+    <<: [*restart-policy, *logging-config]
     environment:
       ROOT_PATH: ""
       ALLOWED_HOSTS: "${ALLOWED_HOSTS:-*}"
